Intellij warning removal and cleanup + Javadoc